chore: fix more lint warnings