@@ -21,12 +21,11 @@ import java.util.Collection;
 import java.util.LinkedHashSet;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 public class CommandArgumentType implements ArgumentType<Command> {
     private static final CommandArgumentType INSTANCE = new CommandArgumentType();
     private static final DynamicCommandExceptionType NO_SUCH_COMMAND = new DynamicCommandExceptionType(name -> Component.literal("Command with name " + name + " doesn't exist."));
-    private static final Collection<String> EXAMPLES = Commands.COMMANDS.stream().limit(3).map(Command::getName).collect(Collectors.toList());
+    private static final Collection<String> EXAMPLES = Commands.COMMANDS.stream().limit(3).map(Command::getName).toList();
 
     private CommandArgumentType() {
     }
